# Excercise

./: convert_disp_siamese_data.cpp~  resize.py~  test.lua~
MRF/: MRFEnergy.h  instances.h  typeGeneral.h
cblas_matrix_mult/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  im2col.hpp  im2col.hpp~  main.cpp  main.cpp~  matrix_multi.hpp  matrix_multi.hpp~  runUnitTests  softmax.hpp  softmax.hpp~
cblas_matrix_mult/Testing/Temporary/: CTestCostData.txt
cblas_matrix_mult/gtest/: Makefile  cmake_install.cmake
clTest/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cl_kernel.cl  cmake_install.cmake  main.cpp  main.cpp~
cnn/: config.h  network.h
cnn/utils/: aligend_allocator.h  cnn_error.h
covolution/: core.hpp  im2col.hpp  im2col.hpp~
cub/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  example_block_scan.cu  example_block_scan.cu~  nvTest
cub/cmake/: FindCUB.cmake  FindCUB.cmake~
cuda-mix/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  cmake_install.cmake  nvTest  vec_add.cpp  vec_add.cpp~  vec_add.h  vec_add_gpu.cu  vec_add_gpu.cu~
cuda_edge/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  a.out  cmake_install.cmake  edge  edge_detection.h  edge_detection.h~  main.cpp~  main.cu  main.cu~
data-augmentation/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  generator  image_generator.hpp  image_generator.hpp~  main.cpp  main.cpp~
eigen/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  a.out  cmake_install.cmake  main.cpp  project  test
eigen/a/: CMakeLists.txt  CMakeLists.txt~  Makefile  a.cpp  a.cpp~  a.c~  cmake_install.cmake
eigen/b/: CMakeLists.txt  CMakeLists.txt~  Makefile  b.cpp  b.c~  b.h  b.h~  cmake_install.cmake
kernel-side/: main.cu  main.cu~  out
link/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Test.h  Test.h~  cmake_install.cmake  main.cpp  main.cpp~  main.c~  nvTest  vecAdd.cu  vecAdd.cu~  vecAdd_cpu.cpp  vecAdd_cpu.cpp~  vecAdd_gpu.cu  vecAdd_gpu.cu~
reduce/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  common.hpp  reduce.cu  reduce.hpp  scan.cu
shlf/: a.out  main.cu  main.cu~
spam/: echo.c  setup.py  setup.py~
tree/: basic_tree.h  traverse-general.py  traverse.py
