cmake_minimum_required(VERSION 2.8)
set(project_name nvTest)
set(CMAKE_C_COMPILER_INIT g++)
find_package(CUDA)
find_package(Boost COMPONENTS system thread timer chrono REQUIRED)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_30)
set(CUDA_ATTACH_VS_BUILD_RULE_TO_CUDA_FILE ON)
FILE(GLOB SRC_LIST "./*.cpp")     
FOREACH(src ${SRC_LIST})
MESSAGE( Find: ${src} )
ENDFOREACH(src)                                     
FILE(GLOB CUDA_SRC_LIST "./*.cu")         
FOREACH(src ${CUDA_SRC_LIST})
MESSAGE( Find: ${src} )
ENDFOREACH(src)
FILE(GLOB HEADER_LISTS "./*.h")
include_directories(${Boost_INCLUDE_DIRS}) 
set(GPU_FILE "./vecAdd_gpu.cu")
set(CPU_FILE "./vecAdd_cpu.cpp")
set(LIB_NAME "vecAdd")

#if(Boost_FOUND)
#	FOREACH(src ${Boost_LIBRARIES})
#	MESSAGE( Find: ${src} )
#	ENDFOREACH(src)
#endif()
CUDA_ADD_LIBRARY(${LIB_NAME} ${GPU_FILE} ${CPU_FILE}) 

ADD_EXECUTABLE(${project_name} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${project_name} ${LIB_NAME} ${CUDA_LIBRARIES} ${Boost_LIBRARIES})  
